Bib fixes, small edits and STATUS update.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -59,7 +59,7 @@
 
 @ARTICLE{Abdul-RahmanKasper2008,
   author = {Abdul-Rahman, R. and Kasper, M.},
-  title = {{Orthogonal Hierarchical N{\'E}d{\'E}lec Elements}},
+  title = {Orthogonal Hierarchical {N}{\'E}d{\'E}lec Elements},
   journal = {IEEE Transactions on Magnetics},
   year = {2008},
   volume = {44},
@@ -225,7 +225,7 @@
 @ARTICLE{AlnaesLoggMardalEtAl2009,
   author = {M. S. Aln\ae{}s and A. Logg and K.-A. Mardal and O. Skavhaug and
 	H. P. Langtangen},
-  title = {{U}nified {F}ramework for {F}inite {E}lement {A}ssembly},
+  title = {Unified Framework for Finite Element Assembly},
   journal = {International Journal of Computational Science and Engineering},
   year = {2009},
   note = {Accepted for publication. Preprint: \url{http://simula.no/research/scientific/publications/Simula.SC.96}},
@@ -1387,7 +1387,7 @@
 }
 
 @MANUAL{BruasetLangtangenothers2006,
-  title = {{Diffpack}},
+  title = {Diffpack},
   author = {A. M. Bruaset and H. P. Langtangen and others},
   year = {2006},
   owner = {logg},
@@ -1697,7 +1697,7 @@
 
 @MISC{Chandra,
   author = {R. Chandra},
-  title = {{C}onjugate {G}radient methods for partial differential equations},
+  title = {Conjugate Gradient methods for partial differential equations},
   note = { Report 129, Computer Science Department, Yale University, New Haven,
 	CT, 1978}
 }
@@ -2369,9 +2369,9 @@
 
 @ARTICLE{ErikssonJohnson1995a,
   author = {Eriksson, K. and Johnson, C.},
-  title = {{Adaptive Finite Element Methods for Parabolic Problems {II}: Optimal
-	Error Estimates in\$ L\_$\backslash$ infty L\_2\$ and\$ L\_$\backslash$
-	infty L\_$\backslash$ infty\$}},
+  title = {Adaptive Finite Element Methods for Parabolic Problems {II}: Optimal
+	Error Estimates in \$ L\_$\backslash$ infty L\_2\$ and\$ L\_$\backslash$
+	infty L\_$\backslash$ infty\$},
   journal = {SIAM Journal on Numerical Analysis},
   year = {1995},
   volume = {32},
@@ -2382,8 +2382,8 @@
 
 @ARTICLE{ErikssonJohnson1995b,
   author = {Eriksson, K. and Johnson, C.},
-  title = {{Adaptive finite element methods for parabolic problems {IV}: Nonlinear
-	problems}},
+  title = {Adaptive finite element methods for parabolic problems {IV}: Nonlinear
+	problems},
   journal = {SIAM Journal on Numerical Analysis},
   year = {1995},
   pages = {1729--1749},
@@ -2590,7 +2590,7 @@
 
 @CONFERENCE{FalgoutYang2002,
   author = {Falgout, R. D. and Yang, U. M.},
-  title = {{Hypre: A library of high performance preconditioners}},
+  title = {Hypre: {A} library of high performance preconditioners},
   booktitle = {Proceedings of the International Conference on Computational Science-Part
 	III},
   year = {2002},
@@ -3317,7 +3317,7 @@
 
 @ARTICLE{HestenesStiefel1952,
   author = {Hestenes, M. R. and Stiefel, E.},
-  title = {{Methods of conjugate gradients for solving linear systems}},
+  title = {Methods of conjugate gradients for solving linear systems},
   journal = {J. Res. Nat. Bur. Stand},
   year = {1952},
   volume = {49},
@@ -3925,12 +3925,12 @@
 
 @MASTERSTHESIS{Jansson2008,
   author = {Niclas Jansson},
-  title = {Adaptive {M}esh {R}efinement for {L}arge {S}cale {P}arallel {C}omputing
+  title = {Adaptive Mesh Refinement for Large scale Parallel Computing
 	with {DOLFIN}},
-  school = {{R}oyal {I}nstitute of {T}echnology},
+  school = {Royal Institute of Technology},
   year = {2008},
-  address = {{S}chool of {C}omputer {S}cience and {E}ngineering},
-  note = {{TRITA-CSC-E} 2008:051},
+  address = {School of Computer Science and Engineering},
+  note = {TRITA-CSC-E 2008:051},
   owner = {logg},
   timestamp = {2009.06.07}
 }
@@ -4661,34 +4661,11 @@
 
 @ARTICLE{LarsonBengzon2008,
   author = {Larson, M.G. and Bengzon, F.},
-  title = {{Adaptive finite element approximation of multiphysics problems}},
+  title = {Adaptive finite element approximation of multiphysics problems},
   journal = {Communications in Numerical Methods in Engineering},
   year = {2008},
   volume = {24},
   number = {6},
-  abstract = {We consider computation of the displacement of an elastic object immersed
-	into a
-
-	viscous incompressible flow. For simplicity, we assume that the mechanics
-	of the solid
-
-	is governed by linear elasticity and the motion of the fluid by the
-	Stokes equation.
-
-	We derive an a posteriori error estimate for this one way coupled
-	problem using
-
-	duality techniques. Based on these estimates we develop an adaptive
-	algorithm that
-
-	automatically constructs a suitable adapted mesh for the fluid and
-	solid domains
-
-	given goal quantities specified on the solid problem},
-  file = {:BengtzonLarson2009.pdf:PDF},
-  owner = {massing},
-  publisher = {John Wiley \& Sons, Ltd. Chichester, UK},
-  timestamp = {2009.05.27}
 }
 
 @ARTICLE{LarsonNiklasson2004,
@@ -4700,71 +4677,16 @@
   volume = {99},
   pages = {113--130},
   number = {1},
-  abstract = {In this paper we analyze a family of discontinuous Galerkin
-
-	methods, parameterized by two real parameters, for elliptic problems
-	in one
-
-	dimension. Our main results are: (1) a complete inf-sup stability
-	analysis char-
-
-	acterizing the parameter values yielding a stable scheme and energy
-	norm
-
-	error estimates as a direct consequence thereof, (2) an analysis of
-	the error
-
-	in L2 where the standard duality argument only works for special parameter
-
-	values yielding a symmetric bilinear form and different orders of
-	conver-
-
-	gence are obtained for odd and even order polynomials in the nonsymmetric
-
-	case. The analysis is consistent with numerical results and similar
-	behavior
-
-	is observed in two dimensions.},
-  file = {:BengtzonLarson2009.pdf:PDF},
-  owner = {massing},
-  publisher = {Springer},
-  timestamp = {2009.05.06}
 }
 
 @ARTICLE{LarssonHansboRunesson2002,
   author = {Larsson, F. and Hansbo, P. and Runesson, K.},
-  title = {{Strategies for computing goal-oriented a posteriori error measures
-	in non-linear elasticity}},
+  title = {Strategies for computing goal-oriented a posteriori error measures
+	in non-linear elasticity},
   journal = {International Journal for Numerical Methods in Engineering},
   year = {2002},
   volume = {55},
   number = {8},
-  abstract = {We investigate the characteristics and performance of goal-oriented
-	a posteriori error measures for a
-
-	class of non-linear elasticity models, while restriction is made to
-	small strain theory. The chosen error
-
-	measure of the displacement ÿeld can be global or local (probing the
-	chosen quantity in a speciÿc
-
-	spatial point). The error is computable with the aid of the solution
-	of a dual problem whose data
-
-	depend on the error measure. The main thrust of the paper is to evaluate
-	the performance of a few
-
-	di erent approximation strategies for computing the dual solution.
-	The chosen strategies are compared
-
-	in terms of accuracy, ease of implementation, reliability and cost-e
-	ciency. A well-known numerical
-
-	example, the Cook’s membrane, is used for the numerical evaluations.},
-  file = {:LarssonHansboRunesson2002.pdf:PDF},
-  owner = {massing},
-  publisher = {John Wiley \& Sons, Ltd. Chichester, UK},
-  timestamp = {2009.05.27}
 }
 
 @ARTICLE{LascauxLesaint1975,
@@ -4796,8 +4718,8 @@
 }
 
 @ARTICLE{LaxMilgram1954,
-  author = {Lax, PD and Milgram, AN},
-  title = {{Parabolic equations}},
+  author = {Lax, P. D. and Milgram, A. N.},
+  title = {Parabolic equations},
   journal = {Annals of Mathematics Studies},
   year = {1954},
   volume = {33},
@@ -4831,15 +4753,12 @@
 
 @ARTICLE{Li2005,
   author = {Li, X.S.},
-  title = {{An overview of SuperLU: Algorithms, implementation, and user interface}},
-  journal = {ACM Transactions on Mathematical Software (TOMS)},
+  title = {An overview of {SuperLU}: Algorithms, implementation, and user interface},
+  journal = {ACM Transactions on Mathematical Software},
   year = {2005},
   volume = {31},
   pages = {302--325},
   number = {3},
-  owner = {logg},
-  publisher = {ACM New York, NY, USA},
-  timestamp = {2009.06.06}
 }
 
 @ARTICLE{LindekleivValen-SendstadMorganEtAl2010,
@@ -4867,38 +4786,15 @@
 	Kent-Andre and Helgeland, Anders and Langtangen, Hans Petter},
   title = {Effect of tonsilar herniation on cyclic {CSF} flow studied with computational
 	flow analysis},
-  journal = {Accepted in American Journal of Neuroradiology},
+  journal = {American Journal of Neuroradiology},
   year = {2011},
-  abstract = {Purpose: The Chiari I malformation, characterized by tonsils extending
-	below the foramen magnum, has increased cerebrospinal fluid (CSF)
-	velocities compared to normal subjects. Measuring the effect of tonsilar
-	herniation on CSF flow in humans is confounded by inter-individual
-	variation. The goal of this study was to determine the effect of
-	herniated tonsils on flow velocity and pressure dynamics. Materials
-	and Methods: A previously described 3D mathematical model of the
-	normal subarachnoid space was modified by extending the tonsils inferiorly.
-	The chamber created was compared with the anatomy of the subarachnoid
-	space. Pressures and velocities were calculated by Computational
-	Fluid Analysis (CFA) methods for sinusoidal flow of a Newtonian fluid.
-	Results were displayed as 2D color-coded plots and 3D animations.
-	Pressure gradients and flow velocities were compared with those in
-	the normal model. Velocity distributions were also compared with
-	those in clinical images of CSF flow. Results: The model represented
-	grossly the subarachnoid space of a Chiari patient. Fluid flow patterns
-	in the Chiari model were complex with jets in some locations and
-	stagnant flow in others. Flow jets, synchronous bi-directional flow,
-	and pressure gradients were greater in the Chiari model than in the
-	normal model. The distribution of flow velocities in the model corresponded
-	well with those observed in clinical images of CSF flow in Chiari
-	I patients. Conclusions: Tonsilar herniation per se increases the
-	pressure gradients and the complexity of flow patterns associated
-	with oscillatory CSF flow.}
+  note = {To appear}
 }
 
 @ARTICLE{LingeHaughtonLovgren2010,
   author = {Linge, Svein and Haughton, Victor and L{\o}vgren, Alf Emil and Mardal,
 	Kent-Andre and Langtangen, Hans Petter},
-  title = {CSF flow dynamics at the cranio-vertebral junction studied with an
+  title = {{CSF} flow dynamics at the cranio-vertebral junction studied with an
 	idealized model of the subarachnoid space and computational flow
 	analysis},
   journal = {American Journal of Neuroradiology},
@@ -5028,59 +4924,19 @@
   volume = {14},
   pages = {93--138},
   number = {2},
-  abstract = {The finite element method can be viewed as a machine that automates
-	the discretization of differential
-
-	equations, taking as input a variational problem, a finite element
-	and a mesh, and producing as output
-
-	a system of discrete equations. However, the generality of the framework
-	provided by the finite element
-
-	method is seldom reflected in implementations (realizations), which
-	are often specialized and can handle
-
-	only a small set of variational problems and finite elements (but
-	are typically parametrized over the choice
-
-	of mesh).
-
-	This paper reviews ongoing research in the direction of a complete
-	automation of the finite element method.
-
-	In particular, this work discusses algorithms for the efficient and
-	automatic computation of a system of
-
-	discrete equations from a given variational problem, finite element
-	and mesh. It is demonstrated that by
-
-	automatically generating and compiling efficient low-level code, it
-	is possible to parametrize a finite element
-
-	code over variational problem and finite element in addition to the
-	mesh.},
-  file = {:Log2007.pdf:PDF},
-  issn = {1134-3060}
 }
 
 @INPROCEEDINGS{Logg2007b,
   author = {Anders Logg},
   title = {Automated Solution of Differential Equations},
   booktitle = {Sixth International Congress on Industrial Applied Mathematics (ICIAM07)
-	and GAMM Annual Meeting, ZÃ¼rich 2007},
+	and GAMM Annual Meeting, Zurich 2007},
   year = {2007},
   volume = {7},
   number = {1},
   pages = {1010601--1010602},
-  note = {http://dx.doi.org/10.1002/pamm.200700234},
-  category = {proceedings},
-  duplicate = {True},
-  issn = {1617-7061},
+  url = {http://dx.doi.org/10.1002/pamm.200700234},
   journal = {Proceedings in Applied Mathematics and Mechanics},
-  owner = {logg},
-  simula = {ok},
-  status = {published},
-  timestamp = {2009.06.06}
 }
 
 @TECHREPORT{Logg2007c,
@@ -5153,7 +5009,7 @@
   author = {A. Logg},
   title = {Multi-Adaptive {G}alerkin Methods for {ODE}s {III}: {A} Priori Error
 	Estimates},
-  journal = {{SIAM} J. Numer. Anal.},
+  journal = {SIAM J. Numer. Anal.},
   year = {2006},
   volume = {43},
   pages = {2624--2646},
@@ -5274,7 +5130,7 @@
 @ARTICLE{Logg2003c,
   author = {A. Logg},
   title = {Multi-Adaptive {G}alerkin Methods for {ODE}s {I}},
-  journal = {{SIAM} J. Sci. Comput.},
+  journal = {SIAM J. Sci. Comput.},
   year = {2003},
   volume = {24},
   pages = {1879--1902},
@@ -5288,7 +5144,7 @@
   author = {A. Logg},
   title = {Multi-Adaptive {G}alerkin Methods for {ODE}s {II}: {I}mplementation
 	and Applications},
-  journal = {{SIAM} J. Sci. Comput.},
+  journal = {SIAM J. Sci. Comput.},
   year = {2003},
   volume = {25},
   pages = {1119--1141},
@@ -6034,7 +5890,7 @@
 
 @ARTICLE{Morley1971,
   author = {Morley, L. S. D.},
-  title = {{The constant-moment plate-bending element}},
+  title = {The constant-moment plate-bending element},
   journal = {The Journal of Strain Analysis for Engineering Design},
   year = {1971},
   volume = {6},
@@ -6233,16 +6089,15 @@
   number = {3}
 }
 
-@ARTICLE{Nedelec1980a,
+﻿@ARTICLE{Nedelec1980a,
   author = {J.-C. N{\'e}d{\'e}lec},
   title = {Mixed finite elements in ${R}^3$},
-  journal = j-NUM-MATH,
-  year = {1980},
+  journal = {Numerische Mathematik},
+  pages = {315-341},
   volume = {35},
-  pages = {315--341},
-  number = {3},
-  month = oct,
-  issn = {0029-599X (print), 0945-3245 (electronic)}
+  year  = {1980},
+  issue = {3},
+  url = {http://dx.doi.org/10.1007/BF01396415},
 }
 
 @BOOK{OdenDemkowicz1996,
@@ -6407,8 +6262,8 @@
 
 @ARTICLE{Olufsen1999,
   author = {Olufsen, Mette S.},
-  title = {{Structured tree outflow condition for blood flow in larger systemic
-	arteries}},
+  title = {Structured tree outflow condition for blood flow in larger systemic
+	arteries},
   journal = {Am J Physiol Heart Circ Physiol},
   year = {1999},
   volume = {276},
@@ -6924,7 +6779,7 @@
 
 @UNPUBLISHED{Rognes2009,
   author = {M. E. Rognes},
-  title = {{Automated Stability Condition Tester (ASCoT)}},
+  title = {Automated Stability Condition Tester ({ASCoT})},
   year = {2009},
   url = {https://launchpad.net/ascot}
 }
@@ -6946,7 +6801,7 @@
   title = {Characterization of complex {CSF} hydrodynamics at the cranio-vertebral
 	junction with computational flow analysis: {H}ealthy and {C}hiari
 	{I} malformation},
-  journal = {Submitted to Am. J. Neuroradiol.},
+  note = {Submitted for publication},
   year = {2008},
   owner = {kent-and},
   timestamp = {2009.06.08}
@@ -7066,8 +6921,8 @@
 
 @ARTICLE{SaadSchultz1986,
   author = {Saad, Y. and Schultz, M.H.},
-  title = {{GMRES: A generalized minimal residual algorithm for solving nonsymmetric
-	linear systems.}},
+  title = {{GMRES}: A generalized minimal residual algorithm for solving nonsymmetric
+	linear systems.},
   journal = {SIAM J. Sci. Stat. Comput.},
   year = {1986},
   volume = {7},
@@ -7164,7 +7019,7 @@
   author = {Sch\"{o}berl, J. and Gerstmayr, H. and Gaisbauer, R.},
   title = {NetGen - a 3D mesh generator},
   location = {http://www.hpfem.jku.at/netgen/},
-  url = {{http://www.hpfem.jku.at/netgen/}}
+  url = {http://www.hpfem.jku.at/netgen/}
 }
 
 @ARTICLE{Schievink1997,
@@ -7545,8 +7400,8 @@
 }
 
 @BOOK{Stroustrup1997,
-  title = {The C++ Programming Language},
-  publisher = {{Addison-Wesley}},
+  title = {The {C++} Programming Language},
+  publisher = {Addison-Wesley},
   year = {1997},
   author = {Bjarne Stroustrup},
   month = jul,
@@ -7605,7 +7460,7 @@
 @ARTICLE{SA¶derlind2003,
   author = {Gustaf SÃ¶derlind},
   title = {Digital Filters in Adaptive Time-Stepping},
-  journal = {{ACM} Trans. Math. Softw.},
+  journal = {ACM Trans. Math. Softw.},
   year = {2003},
   volume = {29},
   pages = {1--26},
@@ -8322,8 +8177,8 @@
 
 @ARTICLE{ZienkiewiczZhu1987,
   author = {Zienkiewicz, O. C. and Zhu, J. Z.},
-  title = {{A simple error estimator and adaptive procedure for practical engineerng
-	analysis}},
+  title = {A simple error estimator and adaptive procedure for practical engineerng
+	analysis},
   journal = {International Journal for Numerical Methods in Engineering},
   year = {1987},
   volume = {24},
@@ -8390,20 +8245,20 @@
 
 @UNPUBLISHED{rh,
   title = {{Rikshospitalet}},
-  note = {\emph{www.rikshospitalet.no/}},
-  key = {{Rikshospitalet}}
+  url = {http://www.rikshospitalet.no/},
+  key = {Rikshospitalet}
 }
 
 @UNPUBLISHED{Siloon,
-  title = {{SILOON}, {S}cripting {I}nterface {L}anguages for {O}bject-{O}riented
-	{N}umerics},
-  key = {{SILOON}},
+  title = {{SILOON}, scripting interface languages for object-oriented
+	numerics},
+  key = {SILOON},
   url = {http://acts.nersc.gov/siloon/index.html}
 }
 
 @UNPUBLISHED{SIP,
   title = {{SIP}; {P}ython extension module generator},
-  note = {\url{http://www.riverbankcomputing.com/software/sip/intro}},
+  url = {http://www.riverbankcomputing.com/software/sip/intro},
   key = {SIP}
 }
 
@@ -8444,7 +8299,7 @@
 }
 
 @UNPUBLISHED{www:dune,
-  title = {{DUNE: Distributed and Unified Numerics Environment}},
+  title = {{DUNE}: Distributed and Unified Numerics Environment},
   key = {DUNE},
   owner = {logg},
   timestamp = {2009.06.06},
@@ -8469,7 +8324,7 @@
 
 @UNPUBLISHED{www:hypre,
   title = {{Hypre} software package},
-  key = {{Hypre}},
+  key = {Hypre},
   owner = {logg},
   timestamp = {2009.06.06},
   url = {http://www.llnl.gov/CASC/hypre/}
@@ -8507,7 +8362,7 @@
 }
 
 @UNPUBLISHED{www:oonumerics,
-  title = {{Object-Oriented Numerics}},
+  title = {Object-Oriented Numerics},
   key = {{Object-Oriented Numerics}},
   owner = {logg},
   timestamp = {2009.06.06},
@@ -8560,7 +8415,7 @@
 }
 
 @UNPUBLISHED{www:python-extending,
-  title = {{E}xtending and {E}mbedding the {P}ython {I}nterpreter},
+  title = {Extending and Embedding the Python Interpreter},
   key = {extending Python},
   url = {http://docs.python.org/extending}
 }
@@ -8603,7 +8458,7 @@
 
 @OTHER{OpenMP,
   key = {OpenMP Application Program Interface},
-  title = {{OpenMP} {A}pplication {P}rogram {I}nterface},
+  title = {{OpenMP} Application Program Interface},
   url = {http://openmp.org},
   year = {2009}
 }
@@ -8630,4 +8485,3 @@
 2 ExplicitGroup:Goal oriented error estimators\;0\;;
 2 ExplicitGroup:Residual-based\;0\;;
 }
-
