More bib clean-up.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -456,7 +456,7 @@
 
 @ARTICLE{ArnoldFalkWinther2000,
   author = {D. N. Arnold and R. S. Falk and R. Winther},
-  title = {Multigrid in {H}(div) and {H}(curl)},
+  title = {Multigrid in {$H({\rm div})$} and {$H(\rm curl)$}},
   journal = {Numerische Mathematik},
   year = {2000},
   volume = {85},
@@ -465,7 +465,7 @@
 
 @ARTICLE{ArnoldFalkWinther1998,
   author = {D. N. Arnold and R. S. Falk and R. Winther},
-  title = {Multigrig preconditioning in {H}(div) on non-convex polygons },
+  title = {Multigrid preconditioning in {$H({\rm div})$} on non-convex polygons},
   journal = {Journal of Computational and Applied Mathematics},
   year = {1998},
   volume = {17},
@@ -485,7 +485,7 @@
 
 @ARTICLE{ArnoldFalkWinther1997a,
   author = {D. N. Arnold and R. S. Falk and R. Winther},
-  title = {Preconditioning in {H}(div) and applications},
+  title = {Preconditioning in {$H({\rm div})$} and applications},
   journal = {Mathematics of Computation},
   year = {1997},
   volume = {66},
@@ -921,10 +921,10 @@
 
 @BOOK{Bers2001,
   title = {Excitation-Contraction Coupling and Cardiac Contractile Force},
-  publisher = {Kluwert Academic},
+  publisher = {Kluwer Academic Publishers},
   year = {2001},
   author = {Bers, D. M.},
-  address = {Dordrecht, The Netherlands},
+  address = {Dordrecht},
   edition = {2nd},
   owner = {logg},
   timestamp = {2006.01.03}
@@ -1666,12 +1666,11 @@
 	M.},
   title = {Characterization of Cerebral Aneurysms for Assessing Risk of Rupture
 	By Using Patient-Specific Computational Hemodynamics Models},
-  journal = {AJNR Am J Neuroradiol},
+  journal = {American Journal of Neuroradiology},
   year = {2005},
   volume = {26},
   pages = {2550-2559},
   number = {10},
-  eprint = {http://www.ajnr.org/cgi/reprint/26/10/2550.pdf},
   url = {http://www.ajnr.org/cgi/content/abstract/26/10/2550}
 }
 
@@ -3014,7 +3013,7 @@
   volume = {192},
   pages = {262--276},
   number = {1},
-  doi = {http://dx.doi.org/10.1016/j.jcp.2003.07.009}
+  url = {http://dx.doi.org/10.1016/j.jcp.2003.07.009}
 }
 
 @ARTICLE{GuiaSternLakattaEtAl2001,
@@ -3410,7 +3409,7 @@
 
 @ARTICLE{Hiptmair1997,
   author = {Hiptmair, R.},
-  title = {Multigrid method for $H({\rm div})$ in three dimensions},
+  title = {Multigrid method for {$H({\rm div})$} in three dimensions},
   journal = {Electronic Transactions on Numerical Analysis},
   year = {1997},
   volume = {6},
@@ -3577,10 +3576,10 @@
 
 @ARTICLE{HuTuminaroBochevEtAl2006,
   author = {J. Hu and R. Tuminaro and P. Bochev and C. Garasi and A. Robinson},
-  title = {Toward an H-Independent Algebraic Multigrid Method for Maxwell's
+  title = {Toward an H-Independent Algebraic Multigrid Method for {M}axwell's
 	Equations},
   journal = {SIAM Journal on Scientific Computing},
-  year = { 2006},
+  year = {2006},
   volume = {27},
   pages = {1669--1688},
   number = {5}
@@ -4379,14 +4378,13 @@
   author = {Krejza, Jaroslaw and Szydlik, Piotr and Liebeskind, David S. and
 	Kochanowicz, Jan and Bronov, Oleg and Mariak, Zenon and Melhem, Elias
 	R.},
-  title = {Age and Sex Variability and Normal Reference Values for the {VMCA/VICA}
+  title = {Age and Sex Variability and Normal Reference Values for the {vMCA/vICA}
 	Index},
-  journal = {AJNR Am J Neuroradiol},
+  journal = {American Journal of Neuroradiology},
   year = {2005},
   volume = {26},
   pages = {730-735},
   number = {4},
-  eprint = {http://www.ajnr.org/cgi/reprint/26/4/730.pdf},
   url = {http://www.ajnr.org/cgi/content/abstract/26/4/730}
 }
 
@@ -5832,8 +5830,6 @@
   volume = {103},
   pages = {155--169},
   number = {1},
-  issn = {0029-599X},
-  publisher = {Springer}
 }
 
 @ARTICLE{MoesDolbowBelytschko1999,
@@ -5853,7 +5849,7 @@
   year = {1998},
   volume = {30},
   pages = {539-578},
-  doi = {10.1146/annurev.fluid.30.1.539}
+  url = {http://dx.doi.org/10.1146/annurev.fluid.30.1.539}
 }
 
 @ARTICLE{Moore1995,
@@ -5864,10 +5860,6 @@
   volume = {16},
   pages = {471--488},
   number = {4},
-  file = {Moore1995.pdf:Moore1995.pdf:PDF},
-  owner = {massing},
-  publisher = {Elsevier},
-  timestamp = {2009.05.27}
 }
 
 @ARTICLE{MoreiraAlmA¡siArcherEtAl2005,
@@ -5907,15 +5899,6 @@
   year = {1968},
   volume = {19},
   pages = {149-169}
-}
-
-@INBOOK{MortensenMardal2010,
-  chapter = {Folder},
-  pages = {Folder},
-  title = {Automated Solution of Differential Equations},
-  year = {2010},
-  editor = {Anders Logg and Garth Wells and Kent Andr{\'e} Mardal},
-  author = {Mikael Mortensen and Kent Andr{\'e} Mardal}
 }
 
 @ARTICLE{MurrayLopez1997,
@@ -5958,7 +5941,6 @@
   volume = {39},
   pages = {29--31},
   publisher = {European Mathematical Society Publishing House},
-  note = {presented by Harish at Mathematisches Forschungsinstitut Oberwolfach},
 }
 
 @ARTICLE{NayrolesTouzotVillon1992,
@@ -6081,26 +6063,16 @@
 
 @ARTICLE{Nedelec1980,
   author = {N{\'e}d{\'e}lec, J.-C.},
-  title = {Mixed finite elements in {${\bf R}\sp{3}$}},
+  title = {Mixed finite elements in {${\bf R}^{3}$}},
   journal = {Numer. Math.},
   year = {1980},
   volume = {35},
   pages = {315--341},
-  number = {3}
-}
-
-﻿@ARTICLE{Nedelec1980a,
-  author = {J.-C. N{\'e}d{\'e}lec},
-  title = {Mixed finite elements in ${R}^3$},
-  journal = {Numerische Mathematik},
-  pages = {315-341},
-  volume = {35},
-  year  = {1980},
-  issue = {3},
+  number = {3},
   url = {http://dx.doi.org/10.1007/BF01396415},
 }
 
-@BOOK{OdenDemkowicz1996,
+﻿@BOOK{OdenDemkowicz1996,
   title = {Applied functional analysis},
   publisher = {CRC press},
   year = {1996},
@@ -6139,6 +6111,20 @@
   booktitle = {IUTAM Symposium on Theoretical, Modelling and Computational Aspects
 	of Inelastic Media},
   year = {2008},
+  url = {http://dx.doi.org/10.1007/978-1-4020-9090-5_18}
+}
+
+﻿@incollection {OelgaardWellsLogg2008,
+  author = {Kristian B. {\O}lgaard and Garth N. Wells and Anders Logg},
+  title = {Automated Computational Modelling for Solid Mechanics},
+  booktitle = {IUTAM Symposium on Theoretical, Computational and Modelling Aspects of Inelastic Media},
+  series = {IUTAM Bookseries},
+  editor = {Reddy, B. Daya},
+  publisher = {Springer Netherlands},
+  pages = {195-204},
+  volume = {11},
+  url = {http://dx.doi.org/10.1007/978-1-4020-9090-5_18},
+  year = {2008}
 }
 
 @BOOK{Ogden1997,
